@@ -24,7 +24,7 @@ class Smarty_Internal_Compile_Assign extends Smarty_Internal_CompileBase {
     {
         $this->compiler = $compiler;
         $this->required_attributes = array('var', 'value');
-        $this->optional_attributes = array('scope', 'nocache', 'smarty_internal_index');
+        $this->optional_attributes = array('scope', 'nocache', 'smarty_internal_index'); 
 
         $_nocache = 'null';
         $_scope = 'null'; 
@@ -32,13 +32,19 @@ class Smarty_Internal_Compile_Assign extends Smarty_Internal_CompileBase {
         // it shall not controll caching of the compiled code, but is a parameter
         if (isset($args['nocache'])) {
             if ($args['nocache'] == 'true') {
-                $_nocache = 'true';
-                $_nocache_boolean = true;
+                $this->compiler->tag_nocache = true;
             } 
             unset($args['nocache']);
         } 
+
         // check and get attributes
         $_attr = $this->_get_attributes($args);
+
+        if ($this->compiler->tag_nocache) {
+            $_nocache = 'true'; 
+            // create nocache var to make it know for further compiling
+            $compiler->template->tpl_vars[trim($_attr['var'],"'")] = new Smarty_variable(null, true);
+        } 
 
         if (isset($_attr['scope'])) {
             $_attr['scope'] = trim($_attr['scope'], "'\"");
