@@ -375,7 +375,8 @@ class Smarty_Internal_Template extends Smarty_Internal_Data {
                     } 
                     $this->cacheFileChecked = true;
                     if ($this->caching === SMARTY_CACHING_LIFETIME_SAVED && $this->properties['cache_lifetime'] >= 0 && (time() > ($this->getCachedTimestamp() + $this->properties['cache_lifetime']))) {
-                        $this->rendered_content = null;
+                      $this->tpl_vars = array();
+		    $this->rendered_content = null;
                         return $this->isCached;
                     } 
                     if (!empty($this->properties['file_dependency']) && $this->smarty->compile_check) {
@@ -389,6 +390,7 @@ class Smarty_Internal_Template extends Smarty_Internal_Data {
                             } 
                             // If ($mtime > $this->getCachedTimestamp()) {
                             If ($mtime > $_file_to_check[1]) {
+                                $this->tpl_vars = array();
                                 $this->rendered_content = null;
                                 return $this->isCached;
                             } 
